# 2048

./: Cargo.toml  Readme.md
src/: animation.rs  board.rs  lib.rs
www/: index.html  index.js  package-lock.json  package.json  style.css
